[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/UI/Inventory/inventorySlot.png" type="Texture" id=1]
[ext_resource path="res://UI/In Game/inGame.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Slot1" type="Control" parent="."]
margin_left = 103.5
margin_top = 163.5
margin_right = 143.5
margin_bottom = 203.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Sprite" parent="Slot1"]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Item1" type="Sprite" parent="Slot1"]
scale = Vector2( 3, 3 )

[node name="ItemCount" type="RichTextLabel" parent="Slot1"]
margin_left = -3.5
margin_top = 0.5
margin_right = 36.5
margin_bottom = 40.5
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Control" parent="."]
margin_left = 104.5
margin_top = 163.5
margin_right = 144.5
margin_bottom = 203.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Sprite" parent="Slot2"]
position = Vector2( 34, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Item2" type="Sprite" parent="Slot2"]
scale = Vector2( 3, 3 )

[node name="ItemCount" type="RichTextLabel" parent="Slot2"]
margin_left = 29.5
margin_top = 0.5
margin_right = 69.5
margin_bottom = 40.5
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Control" parent="."]
margin_left = 103.5
margin_top = 163.5
margin_right = 143.5
margin_bottom = 203.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Sprite" parent="Slot3"]
position = Vector2( 68, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Item3" type="Sprite" parent="Slot3"]
scale = Vector2( 3, 3 )

[node name="ItemCount" type="RichTextLabel" parent="Slot3"]
margin_left = 64.0
margin_top = 1.0
margin_right = 80.0
margin_bottom = 20.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot4" type="Control" parent="."]
margin_left = 103.5
margin_top = 163.5
margin_right = 143.5
margin_bottom = 203.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot4" type="Sprite" parent="Slot4"]
position = Vector2( 102, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Item4" type="Sprite" parent="Slot4"]
scale = Vector2( 3, 3 )

[node name="ItemCount" type="RichTextLabel" parent="Slot4"]
margin_left = 97.5
margin_top = 0.5
margin_right = 137.5
margin_bottom = 40.5
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
